Cambios estables en la calculadora

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="script.js" defer></script>
-    <script src="Calculadora.js" defer></script>
+    <link rel="stylesheet" href="/css/style.css">     
+    <script src="Display.js" type="text/javascript"></script>   
+    <script src="Calculadora.js" type="text/javascript"></script>      
+    <script src="script.js" type="text/javascript" defer></script>
     <title>Calculadora Javascript</title>
 </head>
 
@@ -42,7 +43,6 @@
             <button class="numero">.</button>
             <button class="operador">=</button>
         </div>
-    </div>
+    </div>   
 </body>
-
 </html>
